# deltalakeDB

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CRITICAL_REVIEW_SUMMARY.md  Cargo.toml  IMPLEMENTATION_PROGRESS.md  README.md  SQL_Backed_Delta_Metadata_PRD.md  docker-compose.yml  pyproject.toml  simple_test.rs  test_mirror_serialization.rs  test_python_bindings.py
.factory/docs/: 2025-10-31-openspec-add-repo-skeleton.md  2025-11-09-implement-add-txnlog-traits-proposal.md
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/tests/: import.rs
crates/core/: Cargo.toml
crates/core/src/: actions.rs  commit.rs  delta.rs  error.rs  file.rs  integration_tests.rs  lib.rs  metadata.rs  mocks.rs  protocol.rs  python.rs  reader.rs  reader_adapters.rs  table.rs  tests.rs  traits.rs  transaction.rs  txn_log.rs  types.rs  uri.rs  writer.rs
crates/core/src/tests/: delta_log_integration.rs  mod.rs
crates/core/tests/: end_to_end_tests.rs  python_integration_tests.rs  uri_routing_integration_tests.rs
crates/migration-tools/: Cargo.toml
crates/migration-tools/src/: cli.rs  db_handler.rs  error.rs  error_handler.rs  importer.rs  incremental.rs  lib.rs  progress.rs  reader.rs  validator.rs
crates/migration-tools/tests/: integration_tests.rs
crates/mirror/: Cargo.toml
crates/mirror/src/: checkpoint.rs  config.rs  engine.rs  error.rs  json.rs  lib.rs  object_store.rs  reconciler.rs  serializer.rs  service.rs  worker.rs
crates/mirror/src/engine/: mod.rs
crates/mirror/src/generators/: json.rs  mod.rs  parquet.rs
crates/mirror/src/monitoring/: alerts.rs  health.rs  metrics.rs  mod.rs
crates/mirror/src/pipeline/: mod.rs  task.rs
crates/mirror/src/recovery/: circuit_breaker.rs  mod.rs  reconciler.rs
crates/mirror/src/storage/: mod.rs
crates/mirror/src/storage/backends/: azure.rs  gcs.rs  local.rs  mod.rs  s3.rs
crates/mirror/tests/: integration_tests.rs  mirror_runner.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs
crates/python/: Cargo.toml  README.md  pyproject.toml  setup.py
crates/python/deltalakedb/: __init__.py
crates/python/docs/: api_reference.md  configuration.md  deployment_guide.md  developer_guide.md  logging.md  user_guide.md
crates/python/examples/: async_io_demo.py  basic_example.py  config_file_demo.py  deltalake_integration_demo.py  logging_demo.py  multi_table_transaction_demo.py  performance_optimization_demo.py  testing_demo.py  type_system_demo.py  write_operations_demo.py
crates/python/src/: async_io.rs  caching.rs  cli.rs  compatibility.rs  config.rs  connection.rs  cross_table_validation.rs  dataclasses.rs  deltalake_integration.rs  deltatable.rs  distributed_locking.rs  error.rs  lazy_loading.rs  lib.rs  logging.rs  memory_optimization.rs  migration.rs  mirror_integration.rs  multi_table_transaction.rs  multi_table_transactions.rs  pydantic_models.rs  testing.rs  transaction_recovery.rs  types.rs  uri.rs  write_operations.rs
crates/python/src/bindings/: mod.rs
crates/python/tests/: test_basic.py
crates/sql/: Cargo.toml  README.md
crates/sql-metadata-postgres/: Cargo.toml
crates/sql-metadata-postgres/migrations/: 20240101000000_create_base_schema.sql  20240101000001_create_base_schema.down.sql  20240102000000_add_mirror_status.sql
crates/sql-metadata-postgres/src/: lib.rs  mirror_status.rs  multi_table_writer.rs  reader.rs  reader_tests.rs  schema.rs  writer.rs
crates/sql-metadata-postgres/tests/: concurrent_writer_tests.rs  mirror_integration_tests.rs  multi_table_transaction_tests.rs  reader_conformance_tests.rs  reader_performance_tests.rs  schema_conformance_tests.rs  writer_integration_tests.rs  writer_performance_tests.rs
crates/sql-metadata-postgres/tests/fixtures/: mod.rs
crates/sql/benches/: multi_table_benchmarks.rs
crates/sql/docs/: api.md  configuration.md  examples.md  multi_table_transactions.md  performance-tuning.md  sql_metadata_reader.md
crates/sql/examples/: multi_table_transactions.rs  quick_start.rs  sql_metadata_reader.rs
crates/sql/src/: benchmarks.rs  concurrent_acid_tests.rs  conformance_tests.rs  connection.rs  duckdb.rs  error.rs  isolation_test.rs  lib.rs  mirror.rs  multi_table.rs  multi_table_transaction.rs  optimistic_concurrency.rs  postgres.rs  reader.rs  savepoints.rs  schema.rs  sql_reader_tests.rs  sqlite.rs  traits.rs  transaction.rs  transaction_monitor.rs  two_phase_commit.rs  uri.rs  writer.rs
crates/sql/src/adapters/: duckdb.rs  mod.rs  postgres.rs  sqlite.rs
crates/sql/src/performance/: cache_layer.rs  materialized_views.rs  mod.rs  query_optimizer.rs
crates/sql/src/tests/: integration_tests.rs  mod.rs
crates/sql/tests/: common.rs  documentation_examples.rs  duckdb_reader.rs  multi_table_postgres.rs  postgres_reader.rs  postgres_writer.rs  sqlite_reader.rs
dev/: garage.toml  seaweedfs-s3.json
docs/: API_REFERENCE.md  DEPLOYMENT_OPERATIONS_GUIDE.md  MIGRATION_GUIDE.md  MIGRATION_IMPORT_GUIDE.md  MIGRATION_TO_URIS.md  MIRROR_ENGINE_GUIDE.md  MULTI_TABLE_TRANSACTIONS_ADVANCED.md  MULTI_TABLE_TRANSACTIONS_GUIDE.md  PERFORMANCE_TUNING_GUIDE.md  POSTGRES_READER_GUIDE.md  POSTGRES_SCHEMA_DESIGN.md  POSTGRES_SCHEMA_ER_DIAGRAM.md  POSTGRES_WRITER_GUIDE.md  SQL_IMPLEMENTATION_SUMMARY.md  SQL_URI_SECURITY_GUIDE.md
examples/: python_multi_table_transaction.py
openspec/: project.md
openspec/changes/add-basic-python-example/: proposal.md  tasks.md
openspec/changes/add-deltasql-uri-scheme/: proposal.md  tasks.md
openspec/changes/add-domain-models/: proposal.md  tasks.md
openspec/changes/add-log-mirroring/: design.md  tasks.md
openspec/changes/add-migration-bootstrap-cli/: proposal.md  tasks.md
python/: MIGRATION_GUIDE.md  MIGRATION_README.md  MIGRATION_RUNBOOK.md
python/delkalakedb/: __init__.py  cli.py  database.py  discovery.py  migration.py  validation.py
python/tests/: test_migration.py  test_migration_failures.py  test_migration_integration.py  test_migration_performance.py
scripts/: test-env.sh
src/delkalakedb/: __init__.py  cli.py  migration.py  table.py  uri.py
(+154 files in other folders)
