[workspace]
members = ["crates/core", "crates/sql", "crates/mirror", "crates/python"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
authors = ["Project Authors"]
homepage = "https://github.com/your-org/deltalakeDB"
repository = "https://github.com/your-org/deltalakeDB"
publish = false

[workspace.dependencies]
# Placeholder for future dependencies
# delta-rs = { version = "...", default-features = false }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid"] }
duckdb = { version = "0.9", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
tempfile = "3.8"
chrono = { version = "0.4", features = ["serde"] }
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py312"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
