[workspace]
members = ["crates/core", "crates/sql", "crates/mirror", "crates/python"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
authors = ["Project Authors"]
homepage = "https://github.com/your-org/deltalakeDB"
repository = "https://github.com/your-org/deltalakeDB"
publish = false

[workspace.dependencies]
# Domain model dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

# Testing dependencies
proptest = "1.0"
quickcheck = "1.0"

# SQL and async dependencies
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid", "json"] }
duckdb = { version = "0.9", features = ["bundled", "chrono", "uuid", "json"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Tracing and monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Connection pooling
deadpool = "0.10"
deadpool-postgres = { version = "0.12", features = ["rt_tokio_1"] }

# Object storage and mirroring
object-store = { version = "0.8", features = ["aws", "azure", "gcp"] }
parquet = { version = "50.0", features = ["async", "json"] }
