[workspace]
members = ["crates/core", "crates/sql", "crates/mirror"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
authors = ["Project Authors"]
homepage = "https://github.com/your-org/deltalakeDB"
repository = "https://github.com/your-org/deltalakeDB"
publish = false

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
tracing = "0.1"
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
arrow-array = { version = "53.1.0" }
arrow-schema = { version = "53.1.0" }
parquet = { version = "53.1.0", features = ["arrow"] }
