[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "delkalakedb"
version = "0.0.0"
description = "SQL-backed metadata plane for Delta Lake"
readme = "README.md"
requires-python = ">=3.12"
# License TBD; propose adding via a later change
# license = { text = "" }
authors = [{ name = "Project Authors" }]
dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "click>=8.0.0",
    "pyarrow>=10.0.0",
    "pandas>=1.5.0",
]

[project.optional-dependencies]
# Install with: `uv sync --extra dev`
dev = [
  "ruff>=0.6.0",
  "black>=24.0.0",
  "isort>=5.13.0",
  "mypy>=1.8.0",
  "pytest>=8.0.0",
]

# Database dependencies
sqlite = [
  "aiosqlite>=0.19.0",
]

postgres = [
  "asyncpg>=0.28.0",
]

# All databases
all-dbs = [
  "delkalakedb[sqlite,postgres]",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
strict = true

[tool.maturin]
python-source = "python"
module-name = "delkalakedb._delkalakedb"
features = ["pyo3/extension-module"]

[project.scripts]
deltalakedb = "delkalakedb.cli:main"
