[package]
name = "deltalakedb-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

description = "Command line utilities for deltalakedb"

[[bin]]
name = "dl"
path = "src/main.rs"

[dependencies]
anyhow = "1"
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
parquet = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
deltalakedb-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
deltalakedb-mirror = { path = "../mirror" }
deltalakedb-sql = { path = "../sql" }
tempfile = "3"
