[package]
name = "deltalakedb-mirror"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
deltalakedb-core = { path = "../core" }
deltalakedb-sql = { path = "../sql" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

# Object storage
object-store = { workspace = true }
parquet = { workspace = true }

# HTTP client for object storage
reqwest = { version = "0.11", features = ["json"] }

# Retry and backoff
backoff = { version = "0.4", features = ["tokio"] }

# Metrics and monitoring
metrics = "0.21"
tempfile = "3.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
proptest = "1.0"
