[package]
name = "deltalakedb-python"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "deltalakedb_python"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
deltalakedb-core = { path = "../core" }
deltalakedb-sql = { path = "../sql" }

# PyO3 for Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# URL parsing
url = "2.4"

# Time handling
chrono = { workspace = true, features = ["serde"] }

# UUID generation
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38", "auto-initialize"] }

[features]
default = ["python-3-8"]
python-3-8 = ["pyo3/abi3-py38"]
python-3-9 = ["pyo3/abi3-py39"]
python-3-10 = ["pyo3/abi3-py310"]
python-3-11 = ["pyo3/abi3-py311"]