[package]
name = "deltalakedb-sql"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
deltalakedb-core = { path = "../core" }
sqlx = { workspace = true }
duckdb = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
deadpool = { workspace = true }
deadpool-postgres = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
