[package]
name = "deltalakedb-sql"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
deltalakedb-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
parquet = { workspace = true }
arrow = { workspace = true }
bytes = { workspace = true }
futures = "0.3"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "multi_table_benchmarks"
harness = false

[[example]]
name = "multi_table_transactions"
path = "examples/multi_table_transactions.rs"
